summaries/07_final/summary.txt
===== RUN TIMESTAMP: 2025-09-12 13:20:32 EDT =====

===== LOG TAILS =====
--- PREP (tail) ---
START PREP 2025-09-12 13:20:32 EDT
  File "/home/runner/work/baseball_for_mat/baseball_for_mat/scripts/prepare_daily_projection_inputs.py", line 1
    name: 07_final_projections
            ^
SyntaxError: invalid decimal literal

--- BATTERS (tail) ---
(missing)

--- PITCHERS (tail) ---
(missing)

--- GAME SCORES (tail) ---
(missing)

===== ERROR GREP (from all logs) =====
summaries/07_final/batter_event_probs_errors.txt:RuntimeError("data/_projections/batter_props_projected_final.csv missing columns: ['team_id', 'game_id']")
summaries/07_final/errors_batter_events.txt:RuntimeError('One or more batter games lack an opponent starter in pitcher_props_projected_final.csv; see summaries/07_final/missing_opponent_starter_games.csv')
summaries/07_final/prep_daily_log.txt:SyntaxError: invalid decimal literal
summaries/07_final/prep_injection_log.txt:[FAIL] TypeError("cannot convert the series to <class 'int'>")
(no errors found by grep)
